# 3D-aruco-generator

./: README.md  pyproject.toml
src/aruco3d_generator/: generate_aruco.py
